fixed horizontal scroll bug on expanding project slidein

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,6 +252,7 @@ body {
 }
 
 .slide-in.show {
+    overflow-x: hidden;
     transform: translateX(0);
     -webkit-transform: translateX(0);
 }
@@ -273,6 +274,7 @@ body {
 	border-width: 14px;
 	margin-top: -14px;
 }
+
 .slide-in:before {
 	border-color: rgba(49, 47, 62, 0);
 	border-left-color: #312f3e;
@@ -291,7 +293,7 @@ body {
     float: right;
     width: 70%;
     height: 100%;
-    padding: 15px 0;
+    padding: 15px 15px 15px 0;
     background: white;
     font-size: 1em;
 }
